--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.4.1",
+    "sass": "^1.56.2",
+    "styled-components": "^6.1.12",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
